cmake_minimum_required(VERSION 3.23)
project(colorChooser C)

set(CMAKE_C_STANDARD 11)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

add_executable(colorChooser
        main.c)

TARGET_LINK_LIBRARIES(colorChooser ${GTK3_LIBRARIES})